syntax = "proto3";

package analytics_service;

option go_package = "proto/generated/analytics_service";

service AnalyticsService {
  rpc RecordClick(ClickEvent) returns (ClickResponse);
  rpc GetStatistics(StatsRequest) returns (StatsResponse);
}

message ClickEvent {
  string short_code = 1;
  string ip_address = 2;
  string user_agent = 3;
  string referer = 4;
  string country = 5;
}

message ClickResponse {
  bool success = 1;
}

message StatsRequest {
  string short_code = 1;
}

message StatsResponse {
  int64 total_clicks = 1;
  int64 unique_visitors = 2;
  string last_clicked_at = 3;
}
