syntax = "proto3";

package urlservice;

option go_package = "github.com/yourname/url-shortener/proto/urlservice";

service URLService {
  rpc CreateShortURL(CreateURLRequest) returns (CreateURLResponse);
  rpc GetOriginalURL(GetURLRequest) returns (GetURLResponse);
  rpc DeleteURL(DeleteURLRequest) returns (DeleteURLResponse);
}

message CreateURLRequest {
  string original_url = 1;
  string user_id = 2;
  int64 expires_in_days = 3;
}

message CreateURLResponse {
  string short_code = 1;
  string short_url = 2;
  bool success = 3;
  string error = 4;
}

message GetURLRequest {
  string short_code = 1;
}

message GetURLResponse {
  string original_url = 1;
  bool found = 2;
  bool is_active = 3;
}

message DeleteURLRequest {
  string short_code = 1;
}

message DeleteURLResponse {
  bool success = 1;
}
